# advanced-process-control

./: .gitattributes  .gitignore  AGENTS.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  live_app.py  pyproject.toml  run_lab.py
.github/workflows/: ci.yml
apc_lab/: __init__.py  commissioning.py  equations.py  identification.py  live_dryer.py  model_fitting.py  mpc.py  operating_map_component.py  pid.py  process_trends_component.py  psychrometrics.py  scada_ui.py  showcase.py  spray_dryer.py
apc_lab/components/operating_map/: component.js
apc_lab/components/process_trends/: README.md  component.js
tests/: test_commissioning.py  test_equations.py  test_lab.py  test_live_app_tanks.py  test_live_dryer.py  test_model_fitting.py  test_process_trends_component.py  test_psychrometrics.py  test_scada_ui.py  test_showcase.py  test_weather.py
