[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "apc-learning-lab"
version = "0.1.0"
description = "Synthetic spray-dryer lab for learning PID, process identification, and constrained MPC"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hendrik Reitsma" },
]
keywords = ["process-control", "model-predictive-control", "python", "streamlit"]
dependencies = [
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<4",
    "plotly>=5.20,<7",
    "scipy>=1.12,<2",
    "streamlit>=1.57,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
include = ["apc_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
